[tool.poetry]
name = "punch-through"
version = "0.1.0"
description = ""
authors = ["Bertrand Fan <bertrand@fan.net>"]
readme = "README.md"
packages = [{include = "punch_through"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
gunicorn = "^21.2.0"
appcfg = "^1.1.1"
aiohttp = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
